--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "d3fc",
     "element"
   ],
-  "homepage": "https://github.com/d3fc/d3fc-element",
+  "homepage": "https://github.com/JackG188/d3fc-element",
   "main" : "build/d3fc-element.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/d3fc/d3fc-element"
+    "url": "https://github.com/JackG188/d3fc-element"
   },
   "scripts": {
     "bundle": "d3fc-scripts bundle",
