--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "dependencies": {
     "d3-selection": "^1.0.2",
-    "distjs": "^1.0.0",
-    "document-register-element": "^1.0.10"
+    "distjs": "^1.0.0"
   }
 }
