--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "element"
   ],
   "homepage": "https://github.com/JackG188/d3fc-element",
-  "main" : "build/d3fc-element.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/JackG188/d3fc-element"
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "d3-selection": "^1.0.2",
-    "distjs": "^1.0.0"
+    "distjs": "^1.0.0",
+    "http-server": "^0.10.0"
   }
 }
